Flere tester for /generate/: 400 for ugyldig input og 404 for manglende repositoryName